ja-source/docusaurus-plugin-content-docs/version-2.1/sql-manual/sql-functions/scalar-functions/json-functions/json-object.md
---
{
  "title": "JSON_OBJECT",
  "language": "ja",
  "description": "指定されたKey-Valueを含むjsonオブジェクトを生成します。KeyがNULLまたはパラメータ数が奇数の場合、例外エラーが返されます。"
}
---
## 説明
指定されたKey-Valueを含むjsonオブジェクトを生成します。
KeyがNULLの場合、またはパラメータ数が奇数の場合は例外エラーが返されます。

## 構文

```sql
JSON_OBJECT (<key>, <value>[,<key>, <value>, ...])
```
## パラメータ

| パラメータ      | 説明                                       |
|---------|------------------------------------------|
| `<key>`   | 生成されるjsonオブジェクトのKey-ValueにおけるKey値。   |
| `<value>` | 生成されるjsonオブジェクトのKey-ValueにおけるValue値。 |                                                                                                  |

## 使用上の注意

- 慣例として、引数リストはキーと値を交互に並べて構成します。
- Key引数はテキストに強制変換されます。
- Value引数はjsonに変換可能な形式に応じて変換されます。現在、valueとしてarray/struct/map/jsonをサポートしています。

## 戻り値
jsonオブジェクトを返します。特別なケースは以下の通りです：
* パラメータが渡されない場合、空のjsonオブジェクトを返します。
* 渡されるパラメータ数が奇数の場合、例外エラーを返します。
* 渡されるKeyがNULLの場合、例外エラーを返します。
* 渡されるValueがNULLの場合、返されるjsonオブジェクト内のKey-ValueペアのValue値はNULLになります。

## 例

```sql
select json_object();
```
```text
+---------------+
| json_object() |
+---------------+
| {}            |
+---------------+
```
```sql
select json_object('time',curtime());
```
```text
+--------------------------------+
| json_object('time', curtime()) |
+--------------------------------+
| {"time": "10:49:18"}           |
+--------------------------------+
```
```sql
SELECT json_object('id', 87, 'name', 'carrot');
```
```text
+-----------------------------------------+
| json_object('id', 87, 'name', 'carrot') |
+-----------------------------------------+
| {"id": 87, "name": "carrot"}            |
+-----------------------------------------+
```
```sql
select json_object('username',null);
```
```text
+---------------------------------+
| json_object('username', 'NULL') |
+---------------------------------+
| {"username": NULL}              |
+---------------------------------+
```
```sql
select json_object(null,null);
```
```text
ERROR 1105 (HY000): errCode = 2, detailMessage = json_object key can't be NULL: json_object(NULL)
```
```sql
-- support array as object value
SELECT json_object('id', 1, 'level', array('"aaa"','"bbb"'));
```
```text
+------------------------------------------------------------------------------------------------------+
| json_object('id', cast(1 as VARCHAR(65533)), 'level', cast(array('"aaa"', '"bbb"') as JSON), '6267') |
+------------------------------------------------------------------------------------------------------+
| {"id":1,"level":["\"aaa\"","\"bbb\""]}                                                               |
+------------------------------------------------------------------------------------------------------+
```
```sql
-- support map as object value
SELECT json_object('id', 1, 'level', map('a', 'b', 'c', 'd'));
```
```text
+------------------------------------------------------------------------------------------------------+
| json_object('id', cast(1 as VARCHAR(65533)), 'level', cast(map('a', 'b', 'c', 'd') as JSON), '6267') |
+------------------------------------------------------------------------------------------------------+
| {"id":1,"level":{"a":"b","c":"d"}}                                                                   |
+------------------------------------------------------------------------------------------------------+
```
```sql
-- support struct as object value
SELECT json_object('id', 1, 'level', named_struct('name', 'a', 'age', 1));
```
```text
+------------------------------------------------------------------------------------------------------------------+
| json_object('id', cast(1 as VARCHAR(65533)), 'level', cast(named_struct('name', 'a', 'age', 1) as JSON), '6267') |
+------------------------------------------------------------------------------------------------------------------+
| {"id":1,"level":{"name":"a","age":1}}                                                                            |
+------------------------------------------------------------------------------------------------------------------+
```
```sql
-- support json as object value
SELECT json_object('id', 1, 'level', cast('{\"a\":\"b\"}' as JSON));
```
```text
+------------------------------------------------------------------------------------------+
| json_object('id', cast(1 as VARCHAR(65533)), 'level', cast('{"a":"b"}' as JSON), '6267') |
+------------------------------------------------------------------------------------------+
| {"id":1,"level":{"a":"b"}}                                                               |
+------------------------------------------------------------------------------------------+
```
